--- a/package.json
+++ b/package.json
@@ -5,27 +5,31 @@
   "directories": {
     "test": "tests"
   },
-    "scripts": {
+  "scripts": {
     "test": "mocha --timeout 10000",
     "start": "node src/index.js",
     "deploy": "node scripts/deploy.js",
     "interact": "node scripts/interact.js"
-    },
-
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0",
+    "alchemy-sdk": "^3.4.4",
     "async": "^3.2.6",
     "axios": "^1.7.7",
     "bignumber.js": "^9.1.2",
+    "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "node-notifier": "^10.0.1",
     "web3": "^4.13.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "chai": "^5.1.1",
+    "ethereum-waffle": "^4.0.10",
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.22.13",
     "mocha": "^10.7.3"
